[project]
name = "billing-voice-bench-local"
version = "0.1.0"
description = "Local benchmark for patient-billing voice-agent safety behavior"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "duckdb>=1.5.0",
  "fastapi>=0.116.0",
  "jinja2>=3.1.6",
  "pydantic>=2.12.0",
  "rich>=14.0.0",
  "typer>=0.20.0",
  "uvicorn>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.0",
  "ruff>=0.14.0",
]

[project.scripts]
billing-bench = "billing_voice_bench_local.cli:main"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
